src/main/java/grump/GrumPParser.java
package grump;
// Generated from GrumP.g4 by ANTLR 4.5
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class GrumPParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		THIS=1, EXAMPLE=2, SKETCH=3, POINT=4, DISTANCE=5, CONSTANT=6, CONSTRAINT=7, 
		CONSTRUCTOR=8, DECLARE=9, DEFINE=10, DISPLAY=11, PARAMETER=12, EQUATION=13, 
		EXPRESSION=14, EXTENDS=15, SQUARE=16, SQRT=17, SIN=18, COS=19, ASIN=20, 
		ACOS=21, PI=22, GOLDEN_RATIO=23, IntegerLiteral=24, FloatingPointLiteral=25, 
		LPAREN=26, RPAREN=27, LBRACE=28, RBRACE=29, LBRACK=30, RBRACK=31, SEMI=32, 
		COMMA=33, DOT=34, EQUALS=35, ASSIGN=36, ADD=37, SUB=38, MUL=39, DIV=40, 
		Symbol=41, WS=42, LINE_COMMENT=43;
	public static final int
		RULE_grump = 0, RULE_topLevelStatements = 1, RULE_topLevelStatement = 2, 
		RULE_define = 3, RULE_defineType = 4, RULE_defineBlock = 5, RULE_defineStatements = 6, 
		RULE_constructor = 7, RULE_constructorStatments = 8, RULE_example = 9, 
		RULE_exampleStatements = 10, RULE_parameterStatement = 11, RULE_parameterAssignment = 12, 
		RULE_sketchStatement = 13, RULE_sketchAssignment = 14, RULE_sketchConstruction = 15, 
		RULE_sketchType = 16, RULE_constraintStatement = 17, RULE_constraint = 18, 
		RULE_constraintExpression = 19, RULE_arguments = 20, RULE_expression = 21, 
		RULE_parameters = 22, RULE_parameter = 23, RULE_parameterType = 24, RULE_builtin = 25, 
		RULE_constant = 26, RULE_reference = 27, RULE_symbols = 28;
	public static final String[] ruleNames = {
		"grump", "topLevelStatements", "topLevelStatement", "define", "defineType", 
		"defineBlock", "defineStatements", "constructor", "constructorStatments", 
		"example", "exampleStatements", "parameterStatement", "parameterAssignment", 
		"sketchStatement", "sketchAssignment", "sketchConstruction", "sketchType", 
		"constraintStatement", "constraint", "constraintExpression", "arguments", 
		"expression", "parameters", "parameter", "parameterType", "builtin", "constant", 
		"reference", "symbols"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'this'", "'example'", "'Sketch'", "'Point'", "'distance'", "'constant'", 
		"'constraint'", "'constructor'", "'declare'", "'define'", "'display'", 
		"'parameter'", "'equation'", "'expression'", "'extends'", "'square'", 
		"'sqrt'", "'sin'", "'cos'", "'asin'", "'acos'", "'PI'", "'GOLDEN_RATIO'", 
		null, null, "'('", "')'", "'{'", "'}'", "'['", "']'", "';'", "','", "'.'", 
		"'='", "':='", "'+'", "'-'", "'*'", "'/'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "THIS", "EXAMPLE", "SKETCH", "POINT", "DISTANCE", "CONSTANT", "CONSTRAINT", 
		"CONSTRUCTOR", "DECLARE", "DEFINE", "DISPLAY", "PARAMETER", "EQUATION", 
		"EXPRESSION", "EXTENDS", "SQUARE", "SQRT", "SIN", "COS", "ASIN", "ACOS", 
		"PI", "GOLDEN_RATIO", "IntegerLiteral", "FloatingPointLiteral", "LPAREN", 
		"RPAREN", "LBRACE", "RBRACE", "LBRACK", "RBRACK", "SEMI", "COMMA", "DOT", 
		"EQUALS", "ASSIGN", "ADD", "SUB", "MUL", "DIV", "Symbol", "WS", "LINE_COMMENT"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "GrumP.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public GrumPParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class GrumpContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(GrumPParser.EOF, 0); }
		public TopLevelStatementsContext topLevelStatements() {
			return getRuleContext(TopLevelStatementsContext.class,0);
		}
		public GrumpContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_grump; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrumPListener ) ((GrumPListener)listener).enterGrump(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrumPListener ) ((GrumPListener)listener).exitGrump(this);
		}
	}

	public final GrumpContext grump() throws RecognitionException {
		GrumpContext _localctx = new GrumpContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_grump);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(59);
			_la = _input.LA(1);
			if (_la==EXAMPLE || _la==DEFINE) {
				{
				setState(58);
				topLevelStatements();
				}
			}

			setState(61);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TopLevelStatementsContext extends ParserRuleContext {
		public List<TopLevelStatementContext> topLevelStatement() {
			return getRuleContexts(TopLevelStatementContext.class);
		}
		public TopLevelStatementContext topLevelStatement(int i) {
			return getRuleContext(TopLevelStatementContext.class,i);
		}
		public TopLevelStatementsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_topLevelStatements; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrumPListener ) ((GrumPListener)listener).enterTopLevelStatements(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrumPListener ) ((GrumPListener)listener).exitTopLevelStatements(this);
		}
	}

	public final TopLevelStatementsContext topLevelStatements() throws RecognitionException {
		TopLevelStatementsContext _localctx = new TopLevelStatementsContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_topLevelStatements);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(64); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(63);
				topLevelStatement();
				}
				}
				setState(66); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==EXAMPLE || _la==DEFINE );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TopLevelStatementContext extends ParserRuleContext {
		public DefineContext define() {
			return getRuleContext(DefineContext.class,0);
		}
		public ExampleContext example() {
			return getRuleContext(ExampleContext.class,0);
		}
		public TopLevelStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_topLevelStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrumPListener ) ((GrumPListener)listener).enterTopLevelStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrumPListener ) ((GrumPListener)listener).exitTopLevelStatement(this);
		}
	}

	public final TopLevelStatementContext topLevelStatement() throws RecognitionException {
		TopLevelStatementContext _localctx = new TopLevelStatementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_topLevelStatement);
		try {
			setState(70);
			switch (_input.LA(1)) {
			case DEFINE:
				enterOuterAlt(_localctx, 1);
				{
				setState(68);
				define();
				}
				break;
			case EXAMPLE:
				enterOuterAlt(_localctx, 2);
				{
				setState(69);
				example();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DefineContext extends ParserRuleContext {
		public TerminalNode DEFINE() { return getToken(GrumPParser.DEFINE, 0); }
		public TerminalNode Symbol() { return getToken(GrumPParser.Symbol, 0); }
		public TerminalNode EXTENDS() { return getToken(GrumPParser.EXTENDS, 0); }
		public DefineTypeContext defineType() {
			return getRuleContext(DefineTypeContext.class,0);
		}
		public DefineBlockContext defineBlock() {
			return getRuleContext(DefineBlockContext.class,0);
		}
		public DefineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_define; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrumPListener ) ((GrumPListener)listener).enterDefine(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrumPListener ) ((GrumPListener)listener).exitDefine(this);
		}
	}

	public final DefineContext define() throws RecognitionException {
		DefineContext _localctx = new DefineContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_define);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(72);
			match(DEFINE);
			setState(73);
			match(Symbol);
			setState(74);
			match(EXTENDS);
			setState(75);
			defineType();
			setState(76);
			defineBlock();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DefineTypeContext extends ParserRuleContext {
		public TerminalNode Symbol() { return getToken(GrumPParser.Symbol, 0); }
		public BuiltinContext builtin() {
			return getRuleContext(BuiltinContext.class,0);
		}
		public DefineTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_defineType; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrumPListener ) ((GrumPListener)listener).enterDefineType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrumPListener ) ((GrumPListener)listener).exitDefineType(this);
		}
	}

	public final DefineTypeContext defineType() throws RecognitionException {
		DefineTypeContext _localctx = new DefineTypeContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_defineType);
		try {
			setState(80);
			switch (_input.LA(1)) {
			case Symbol:
				enterOuterAlt(_localctx, 1);
				{
				setState(78);
				match(Symbol);
				}
				break;
			case SKETCH:
			case POINT:
				enterOuterAlt(_localctx, 2);
				{
				setState(79);
				builtin();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DefineBlockContext extends ParserRuleContext {
		public TerminalNode LBRACE() { return getToken(GrumPParser.LBRACE, 0); }
		public DefineStatementsContext defineStatements() {
			return getRuleContext(DefineStatementsContext.class,0);
		}
		public TerminalNode RBRACE() { return getToken(GrumPParser.RBRACE, 0); }
		public DefineBlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_defineBlock; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrumPListener ) ((GrumPListener)listener).enterDefineBlock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrumPListener ) ((GrumPListener)listener).exitDefineBlock(this);
		}
	}

	public final DefineBlockContext defineBlock() throws RecognitionException {
		DefineBlockContext _localctx = new DefineBlockContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_defineBlock);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(82);
			match(LBRACE);
			setState(83);
			defineStatements();
			setState(84);
			match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DefineStatementsContext extends ParserRuleContext {
		public List<ConstructorContext> constructor() {
			return getRuleContexts(ConstructorContext.class);
		}
		public ConstructorContext constructor(int i) {
			return getRuleContext(ConstructorContext.class,i);
		}
		public List<ParameterStatementContext> parameterStatement() {
			return getRuleContexts(ParameterStatementContext.class);
		}
		public ParameterStatementContext parameterStatement(int i) {
			return getRuleContext(ParameterStatementContext.class,i);
		}
		public List<SketchStatementContext> sketchStatement() {
			return getRuleContexts(SketchStatementContext.class);
		}
		public SketchStatementContext sketchStatement(int i) {
			return getRuleContext(SketchStatementContext.class,i);
		}
		public List<ConstraintStatementContext> constraintStatement() {
			return getRuleContexts(ConstraintStatementContext.class);
		}
		public ConstraintStatementContext constraintStatement(int i) {
			return getRuleContext(ConstraintStatementContext.class,i);
		}
		public DefineStatementsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_defineStatements; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrumPListener ) ((GrumPListener)listener).enterDefineStatements(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrumPListener ) ((GrumPListener)listener).exitDefineStatements(this);
		}
	}

	public final DefineStatementsContext defineStatements() throws RecognitionException {
		DefineStatementsContext _localctx = new DefineStatementsContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_defineStatements);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(89);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==CONSTRUCTOR) {
				{
				{
				setState(86);
				constructor();
				}
				}
				setState(91);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(97);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << SKETCH) | (1L << POINT) | (1L << CONSTANT) | (1L << CONSTRAINT) | (1L << PARAMETER) | (1L << Symbol))) != 0)) {
				{
				setState(95);
				switch (_input.LA(1)) {
				case CONSTANT:
				case PARAMETER:
					{
					setState(92);
					parameterStatement();
					}
					break;
				case SKETCH:
				case POINT:
				case Symbol:
					{
					setState(93);
					sketchStatement();
					}
					break;
				case CONSTRAINT:
					{
					setState(94);
					constraintStatement();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(99);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConstructorContext extends ParserRuleContext {
		public TerminalNode CONSTRUCTOR() { return getToken(GrumPParser.CONSTRUCTOR, 0); }
		public ParametersContext parameters() {
			return getRuleContext(ParametersContext.class,0);
		}
		public TerminalNode LBRACE() { return getToken(GrumPParser.LBRACE, 0); }
		public ConstructorStatmentsContext constructorStatments() {
			return getRuleContext(ConstructorStatmentsContext.class,0);
		}
		public TerminalNode RBRACE() { return getToken(GrumPParser.RBRACE, 0); }
		public TerminalNode Symbol() { return getToken(GrumPParser.Symbol, 0); }
		public ConstructorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_constructor; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrumPListener ) ((GrumPListener)listener).enterConstructor(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrumPListener ) ((GrumPListener)listener).exitConstructor(this);
		}
	}

	public final ConstructorContext constructor() throws RecognitionException {
		ConstructorContext _localctx = new ConstructorContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_constructor);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(100);
			match(CONSTRUCTOR);
			setState(102);
			_la = _input.LA(1);
			if (_la==Symbol) {
				{
				setState(101);
				match(Symbol);
				}
			}

			setState(104);
			parameters();
			setState(105);
			match(LBRACE);
			setState(106);
			constructorStatments();
			setState(107);
			match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConstructorStatmentsContext extends ParserRuleContext {
		public List<ParameterStatementContext> parameterStatement() {
			return getRuleContexts(ParameterStatementContext.class);
		}
		public ParameterStatementContext parameterStatement(int i) {
			return getRuleContext(ParameterStatementContext.class,i);
		}
		public List<SketchStatementContext> sketchStatement() {
			return getRuleContexts(SketchStatementContext.class);
		}
		public SketchStatementContext sketchStatement(int i) {
			return getRuleContext(SketchStatementContext.class,i);
		}
		public List<ConstraintStatementContext> constraintStatement() {
			return getRuleContexts(ConstraintStatementContext.class);
		}
		public ConstraintStatementContext constraintStatement(int i) {
			return getRuleContext(ConstraintStatementContext.class,i);
		}
		public ConstructorStatmentsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_constructorStatments; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrumPListener ) ((GrumPListener)listener).enterConstructorStatments(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrumPListener ) ((GrumPListener)listener).exitConstructorStatments(this);
		}
	}

	public final ConstructorStatmentsContext constructorStatments() throws RecognitionException {
		ConstructorStatmentsContext _localctx = new ConstructorStatmentsContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_constructorStatments);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(114);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << SKETCH) | (1L << POINT) | (1L << CONSTANT) | (1L << CONSTRAINT) | (1L << PARAMETER) | (1L << Symbol))) != 0)) {
				{
				setState(112);
				switch (_input.LA(1)) {
				case CONSTANT:
				case PARAMETER:
					{
					setState(109);
					parameterStatement();
					}
					break;
				case SKETCH:
				case POINT:
				case Symbol:
					{
					setState(110);
					sketchStatement();
					}
					break;
				case CONSTRAINT:
					{
					setState(111);
					constraintStatement();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(116);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExampleContext extends ParserRuleContext {
		public TerminalNode EXAMPLE() { return getToken(GrumPParser.EXAMPLE, 0); }
		public TerminalNode LBRACE() { return getToken(GrumPParser.LBRACE, 0); }
		public ExampleStatementsContext exampleStatements() {
			return getRuleContext(ExampleStatementsContext.class,0);
		}
		public TerminalNode RBRACE() { return getToken(GrumPParser.RBRACE, 0); }
		public TerminalNode Symbol() { return getToken(GrumPParser.Symbol, 0); }
		public ExampleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_example; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrumPListener ) ((GrumPListener)listener).enterExample(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrumPListener ) ((GrumPListener)listener).exitExample(this);
		}
	}

	public final ExampleContext example() throws RecognitionException {
		ExampleContext _localctx = new ExampleContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_example);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(117);
			match(EXAMPLE);
			setState(119);
			_la = _input.LA(1);
			if (_la==Symbol) {
				{
				setState(118);
				match(Symbol);
				}
			}

			setState(121);
			match(LBRACE);
			setState(122);
			exampleStatements();
			setState(123);
			match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExampleStatementsContext extends ParserRuleContext {
		public List<ParameterStatementContext> parameterStatement() {
			return getRuleContexts(ParameterStatementContext.class);
		}
		public ParameterStatementContext parameterStatement(int i) {
			return getRuleContext(ParameterStatementContext.class,i);
		}
		public List<SketchStatementContext> sketchStatement() {
			return getRuleContexts(SketchStatementContext.class);
		}
		public SketchStatementContext sketchStatement(int i) {
			return getRuleContext(SketchStatementContext.class,i);
		}
		public List<ConstraintStatementContext> constraintStatement() {
			return getRuleContexts(ConstraintStatementContext.class);
		}
		public ConstraintStatementContext constraintStatement(int i) {
			return getRuleContext(ConstraintStatementContext.class,i);
		}
		public ExampleStatementsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_exampleStatements; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrumPListener ) ((GrumPListener)listener).enterExampleStatements(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrumPListener ) ((GrumPListener)listener).exitExampleStatements(this);
		}
	}

	public final ExampleStatementsContext exampleStatements() throws RecognitionException {
		ExampleStatementsContext _localctx = new ExampleStatementsContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_exampleStatements);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(130);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << SKETCH) | (1L << POINT) | (1L << CONSTANT) | (1L << CONSTRAINT) | (1L << PARAMETER) | (1L << Symbol))) != 0)) {
				{
				setState(128);
				switch (_input.LA(1)) {
				case CONSTANT:
				case PARAMETER:
					{
					setState(125);
					parameterStatement();
					}
					break;
				case SKETCH:
				case POINT:
				case Symbol:
					{
					setState(126);
					sketchStatement();
					}
					break;
				case CONSTRAINT:
					{
					setState(127);
					constraintStatement();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(132);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
